# Qt-Creator

./: CMakeLists.txt  README.md  Recursos.qrc  chat.cpp  chat.ui  janelacontatos.cpp  janelacontatos.h  janelacontatos.ui  janelaedita.cpp  janelaedita.h  janelaedita.ui  janelapesquisa.cpp  janelapesquisa.h  janelapesquisa.ui  janelasecundaria.cpp  janelasecundaria.h  janelasecundaria.ui  janelaterciaria.cpp  janelaterciaria.h  janelaterciaria.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Banco/: banco
Projeto_Estoque/: CMakeLists.txt  Conexao.h  Recursos.qrc  funcoes_globais.cpp  funcoes_globais.h  main.cpp  pg_editar_produto_venda.cpp  pg_editar_produto_venda.h  pg_editar_produto_venda.ui  pg_gestao_colaboradores.cpp  pg_gestao_colaboradores.h  pg_gestao_colaboradores.ui  pg_gestao_estoque.cpp  pg_gestao_estoque.h  pg_gestao_estoque.ui  pg_gestao_vendas.cpp  pg_gestao_vendas.h  pg_gestao_vendas.ui  pg_login.cpp  pg_login.h  pg_login.ui  pg_nova_venda.cpp  pg_nova_venda.h  pg_nova_venda.ui  pg_principal.cpp  pg_principal.h  pg_principal.ui  variaveis_globais.h
Projeto_Estoque/DataBase/: banco_de_dados.db
